# market_research_skill

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  README.md
OLD/: SESSION_HANDOFF.md
OLD/old-prompts/: equity-research-fix-validation.md  equity-research.md  etf-research-fix-validation.md
cool-financial-research/: .env.example  CHANGELOG.md  README.md  SKILL.md  pyproject.toml
cool-financial-research-cli/: README.md  pyproject.toml
cool-financial-research-cli/src/cool_financial_research/: charts.py  config.py  io.py  orchestrator.py
cool-financial-research-cli/src/cool_financial_research/agents/: base.py  fix.py  validation.py
cool-financial-research-cli/src/cool_financial_research/prompts/: equity-validation.md  etf-validation.md
cool-financial-research-cli/src/cool_financial_research/providers/: paid.py
cool-financial-research-cli/tests/: test_loop_stop.py
cool-financial-research/docs/superpowers/plans/: 2026-05-25-v0.7-openclaw-only.md
cool-financial-research/examples/: issuer-product-map.example.json  openclaw-config.example.json5  paid-provider-classifications.example.json  retail-data-services.example.json
cool-financial-research/prompts/: equity-research-fix-validation.md  equity-research.md  equity-validation.md  etf-research-fix-validation.md  etf-research.md  etf-validation.md
cool-financial-research/provider-data/: README.md
cool-financial-research/schemas/: research-output.schema.json  validation-output.schema.json
cool-financial-research/scripts/: cfr_helper.py  check-openclaw-skill.sh
cool-financial-research/src/cool_financial_research/: __init__.py  charts.py  cli.py  config.py  etf_holdings.py  ledger.py  openclaw_helper.py  orchestrator.py  pdf.py  prompt_loader.py  schemas.py  source_bundle.py  workflow.py  xbrl.py
cool-financial-research/src/cool_financial_research/agents/: __init__.py  base.py  fix.py  research.py  validation.py
cool-financial-research/src/cool_financial_research/prompts/: _quality-gate-addendum.md  artifact-repair.md  etf-research.md
cool-financial-research/src/cool_financial_research/providers/: __init__.py  base.py  edgar.py
cool-financial-research/tests/: test_cfr_helper.py  test_edgar_classifier.py  test_loop_stop.py  test_openclaw_helper.py  test_openclaw_only_surface.py  test_package_layout.py
docs/: README.md  architecture.md  operations.md  quality-bar.md
market-research/: SKILL.md
market-research-full/: SKILL.md
market-research-loop/: SKILL.md
tests/: test_deterministic_data_usage.py  test_deterministic_etf_normalization.py  test_deterministic_research_collector.py  test_market_research_acceptance.py  test_market_research_full_acceptance.py  test_market_research_helper.py  test_md_to_pdf.py  test_normalized_artifact_hygiene.py  test_procedural_source_helper.py  test_producer_self_check.py  test_provider_plan_quality.py  test_report_language_lint.py  test_repository_layout.py  test_research_data.py  test_research_loop.py  test_research_output_schema.py  test_script_utils.py  test_sec_company_tickers_bundle_policy.py  test_source_registry_reconcile.py  test_technical_signal_quality.py  test_validate_market_research.py
validate-market-research/: SKILL.md
(+120 files in other folders)
